--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-Hello ... I am Lily Please call me if you have some work in python from me
+Hello ... I am Lily Please call me if you have some work in python for me
